--- a/website/templates/bonus.html
+++ b/website/templates/bonus.html
@@ -4,7 +4,7 @@
     <ul class="list-group list-group-flush d-flex justify-content-between align-items-right" id="notes">
       {% for note in user.notes %}
       <li class="list-group-item">
-        {{ note.data }} : {{ note.bounty }}
+        {{ note.data }} : {{ note.bounty }}$
         <button type="button" class="btn btn-primary" onClick="answerYes({{ note.id }})">Yes</button>
         <button type="button" class="btn btn-primary" onClick="answerNo({{ note.id }})">No</button>
         
