--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,9 +6,9 @@
 <br>
 <h2 align="center"><a href="/deposit">Deposit</a></h2>
 <h2 align="center"><a href="/withdraw">Withdraw</a></h2>
-<!--<h2 align="center"><a href="/send">Send</a></h2>-->
+<h2 align="center"><a href="/send">Send</a></h2>
 <h2 align="center"><a href="/bonus">Question</a></h2>
-<h2 align="center"><a href="/question">Question (DEBUG)</a></h2>
+<h2 align="center"><a href="/question">Edit questions (FOR ADMINS)</a></h2>
 <h2 align="center"><a href="/stocks">Stocks</a></h2>
 <h2 align="center"><a href="/taxes">Taxes</a></h2>
 <h2 align="center"><a href="/info">Info</a></h2>
