--- a/website/templates/bonus.html
+++ b/website/templates/bonus.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %} {% block title %}Question{% endblock %} {% block content
+{% extends "base.html" %} {% block title %}Quiz{% endblock %} {% block content
     %}
-    <h1 align="center">Question</h1>
+    <h1 align="center">Quiz</h1>
     <ul class="list-group list-group-flush d-flex justify-content-between align-items-right" id="notes">
       {% for note in user.notes %}
       <li class="list-group-item">
