--- a/website/templates/send.html
+++ b/website/templates/send.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Send{% endblock %} {% block content
+{% extends "base.html" %} {% block title %}Transfer{% endblock %} {% block content
 %}
 <style>
     .container {
@@ -32,7 +32,7 @@
 
 <div class="container">
     
-    <h1>Send</h1>
+    <h1>Transfer</h1>
 
     <form method="post">
       
@@ -41,7 +41,7 @@
       <input type="number" id="money" name="money" class="input-field" placeholder="Enter amount" min="1" max="2147483647">
 
     
-        <button class="black-button">Send</button>
+        <button class="black-button">Transfer</button>
 
     </form>
   </div>
