--- a/website/templates/question.html
+++ b/website/templates/question.html
@@ -5,8 +5,7 @@
       {% for note in user.notes %}
       <li class="list-group-item">
         {{ note.data }} : {{ note.answer }}
-        <button type="button" class="close" onClick="deleteNote({{ note.id }})">
-          <span aria-hidden="true">&times;</span>
+        <button type="button" class="btn-close" onClick="deleteNote({{ note.id }})" aria-label="Close">
         </button>
       </li>
       {% endfor %}
