--- a/website/templates/thistory.html
+++ b/website/templates/thistory.html
@@ -10,10 +10,10 @@
 
       <li class="list-group-item">
         <div style="width: 840px; height: 160px; background: rgba(64, 64, 64, 0.10)">
-          <div style="width: 100px; height: 100px; left: 26px; top: 30px; position: absolute; background: #D9D9D9; border-radius: 9999px"></div>
-          <div style="width: 456px; height: 39px; left: 160px; top: 41px; position: absolute; color: #1E1E1E;  word-wrap: break-word"><h1>Withdrawal</h1></div>
+          <div style="width: 100px; height: 100px; left: 26px; top: 30px; display: flex; justify-content: center; align-items: center; position: absolute; border-radius: 9999px"><img src="{{ url_for('static', filename='withdraw.png') }}" alt="" style="width: 80px; height: 80px;"></div>
+          <div style="width: 456px; height: 39px; left: 160px; top: 41px; position: absolute; color: #1E1E1E;  word-wrap: break-word"><h2>Withdrawal</h2></div>
           <div style="width: 211px; height: 33px; left: 159px; top: 114px; position: absolute; color: #1E1E1E;  word-wrap: break-word"><h6>{{transaction.date}}</h6></div>
-          <div style="width: 194px; height: 85px; left: 669px; top: 40px; position: absolute; color: #f61212;  word-wrap: break-word"><h2>${{transaction.money}}</h2></div>
+          <div style="width: 194px; height: 85px; left: 669px; top: 40px; position: absolute; color: #f61212;  word-wrap: break-word"><h3>${{transaction.money}}</h3></div>
         </div>
       </li>
 
@@ -21,10 +21,10 @@
 
       <li class="list-group-item">
         <div style="width: 840px; height: 160px; background: rgba(64, 64, 64, 0.10)">
-          <div style="width: 100px; height: 100px; left: 26px; top: 30px; position: absolute; background: #D9D9D9; border-radius: 9999px"></div>
-          <div style="width: 456px; height: 39px; left: 160px; top: 41px; position: absolute; color: #1E1E1E;  word-wrap: break-word"><h1>Deposit</h1></div>
+          <div style="width: 100px; height: 100px; left: 26px; top: 30px; display: flex; justify-content: center; align-items: center; position: absolute; border-radius: 9999px"><img src="{{ url_for('static', filename='deposit.png') }}" alt="" style="width: 80px; height: 80px;"></div>
+          <div style="width: 456px; height: 39px; left: 160px; top: 41px; position: absolute; color: #1E1E1E;  word-wrap: break-word"><h2>Deposit</h2></div>
           <div style="width: 211px; height: 33px; left: 159px; top: 114px; position: absolute; color: #1E1E1E;  word-wrap: break-word"><h6>{{transaction.date}}</h6></div>
-          <div style="width: 194px; height: 85px; left: 669px; top: 40px; position: absolute; color: #24F612;  word-wrap: break-word"><h2>${{transaction.money}}</h2></div>
+          <div style="width: 194px; height: 85px; left: 669px; top: 40px; position: absolute; color: #24F612;  word-wrap: break-word"><h3>${{transaction.money}}</h3></div>
         </div>
       </li>
 
@@ -32,10 +32,10 @@
 
       <li class="list-group-item">
         <div style="width: 840px; height: 160px; background: rgba(64, 64, 64, 0.10)">
-          <div style="width: 100px; height: 100px; left: 26px; top: 30px; position: absolute; background: #D9D9D9; border-radius: 9999px"></div>
-          <div style="width: 456px; height: 39px; left: 160px; top: 41px; position: absolute; color: #1E1E1E;  word-wrap: break-word"><h1>Quiz</h1></div>
+          <div style="width: 100px; height: 100px; left: 26px; top: 30px; display: flex; justify-content: center; align-items: center; position: absolute; border-radius: 9999px"><img src="{{ url_for('static', filename='deposit.png') }}" alt="" style="width: 80px; height: 80px;"></div>
+          <div style="width: 456px; height: 39px; left: 160px; top: 41px; position: absolute; color: #1E1E1E;  word-wrap: break-word"><h2>Quiz</h2></div>
           <div style="width: 211px; height: 33px; left: 159px; top: 114px; position: absolute; color: #1E1E1E;  word-wrap: break-word"><h6>{{transaction.date}}</h6></div>
-          <div style="width: 194px; height: 85px; left: 669px; top: 40px; position: absolute; color: #24F612;  word-wrap: break-word"><h2>${{transaction.money}}</h2></div>
+          <div style="width: 194px; height: 85px; left: 669px; top: 40px; position: absolute; color: #24F612;  word-wrap: break-word"><h3>${{transaction.money}}</h3></div>
         </div>
       </li>
       
@@ -44,19 +44,19 @@
       {% if transaction.user_id == user.id %}
       <li class="list-group-item">
         <div style="width: 840px; height: 160px; background: rgba(64, 64, 64, 0.10)">
-          <div style="width: 100px; height: 100px; left: 26px; top: 30px; position: absolute; background: #D9D9D9; border-radius: 9999px"></div>
-          <div style="width: 456px; height: 39px; left: 160px; top: 41px; position: absolute; color: #1E1E1E;  word-wrap: break-word"><h1>Transfer to {{transaction.taker_name}}</h1></div>
+          <div style="width: 100px; height: 100px; left: 26px; top: 30px; display: flex; justify-content: center; align-items: center; position: absolute; border-radius: 9999px"><img src="{{ url_for('static', filename='send.png') }}" alt="" style="width: 80px; height: 80px;"></div>
+          <div style="width: 456px; height: 39px; left: 160px; top: 41px; position: absolute; color: #1E1E1E;  word-wrap: break-word"><h2>Transfer to {{transaction.taker_name}}</h2></div>
           <div style="width: 211px; height: 33px; left: 159px; top: 114px; position: absolute; color: #1E1E1E;  word-wrap: break-word"><h6>{{transaction.date}}</h6></div>
-          <div style="width: 194px; height: 85px; left: 669px; top: 40px; position: absolute; color: #f61212;  word-wrap: break-word"><h2>${{transaction.money}}</h2></div>
+          <div style="width: 194px; height: 85px; left: 669px; top: 40px; position: absolute; color: #f61212;  word-wrap: break-word"><h3>${{transaction.money}}</h3></div>
         </div>
       </li>
       {% else %}
       <li class="list-group-item">
         <div style="width: 840px; height: 160px; background: rgba(64, 64, 64, 0.10)">
-          <div style="width: 100px; height: 100px; left: 26px; top: 30px; position: absolute; background: #D9D9D9; border-radius: 9999px"></div>
-          <div style="width: 456px; height: 39px; left: 160px; top: 41px; position: absolute; color: #1E1E1E;  word-wrap: break-word"><h1>Transfer from {{ transaction.user_name }}</h1></div>
+          <div style="width: 100px; height: 100px; left: 26px; top: 30px; display: flex; justify-content: center; align-items: center; position: absolute; border-radius: 9999px"><img src="{{ url_for('static', filename='send.png') }}" alt="" style="width: 80px; height: 80px;"></div>
+          <div style="width: 456px; height: 39px; left: 160px; top: 41px; position: absolute; color: #1E1E1E;  word-wrap: break-word"><h2>Transfer from {{ transaction.user_name }}</h2></div>
           <div style="width: 211px; height: 33px; left: 159px; top: 114px; position: absolute; color: #1E1E1E;  word-wrap: break-word"><h6>{{transaction.date}}</h6></div>
-          <div style="width: 194px; height: 85px; left: 669px; top: 40px; position: absolute; color: #24F612;  word-wrap: break-word"><h2>${{transaction.money}}</h2></div>
+          <div style="width: 194px; height: 85px; left: 669px; top: 40px; position: absolute; color: #24F612;  word-wrap: break-word"><h3>${{transaction.money}}</h3></div>
         </div>
       </li>
       {% endif %}
